Attempting to fix tab wrapping on smaller displays

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -32,8 +32,8 @@
     padding-bottom: .25rem;
   }
 
-  .layout__content {
-    font-size: .95rem;
+  .react-tabs__tab {
+    padding: 0 .25rem;
   }
 }
 
